--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="navbar">
     <div class="container">
-      <a href="#">Remember<span>That</span></a>
+      <a class="logo" href="#">Remember<span>That</span></a>
 
       <img id="mobile-cta" class="mobile-menu" src="images/menu.svg" alt="Open Navigation">
 
@@ -48,7 +48,7 @@
 
   <section class="features-section">
     <div class="container">
-      <ul>
+      <ul class="features-list">
         <li>Unlimited Tasks</li>
         <li>SMS Task Reminders</li>
         <li>Confetti Explosions upon Task Completions</li>
