--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
 
   <section class="hero">
-    <div class="contaienr">
+    <div class="container">
       <div class="left-col">
         <p class="subhead">It's Nitty &amp; Gritty</p>
         <h1>A Task App That Doesn't Stink</h1>
